# cli-todo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
src/todo/: add.rs  due.rs  edit.rs  error.rs  go.rs  init.rs  lib.rs  list.rs  rm.rs  sql_utils.rs
