[package]
authors = ["Ben Askew-Gale <bengale2007@googlemail.com>"]
name = "cli-todo"
categories = ["command-line-utilities"]
description = "A CLI based todo tool for adding entries on the fly."
keywords = ["todo"]
readme = "./README.md"
repository = "https://github.com/BenGale93/cli-todo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "todo"
path = "src/bin/todo/main.rs"

[lib]
name = "todo"
path = "src/todo/lib.rs"

[dependencies]
chrono = { version = "0.4.25", features = ["serde"] }
chronoutil = "0.2.4"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.0.0"
confy = "0.5.1"
directories = "5.0.1"
log = "0.4.19"
nom = "7.1.3"
pretty_env_logger = "0.5.0"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.163", features = ["serde_derive"] }
tabled = "0.12.0"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.17.0"
